# llm-app

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.Trash-0/files/: agent_conversation.ipynb
.Trash-0/info/: agent_conversation.ipynb.trashinfo  untitled.txt.trashinfo
.github/workflows/: docker-images.yml  ecr-images.yml  run-tests.yml  validate.yml
api/: settings.py
api/routes/: arxiv_routes.py  endpoints.py  llm_routes.py  pdf_routes.py  status_routes.py  v1_router.py  website_routes.py
app/: Home.py  password.py
app/pages/: 1_Chat_with_PDF.py  1_Chat_with_PDFs.py  1_PDF_Assistant.py  1_Prompt_Demo.py  2_Chat_with_Arxiv.py  2_Chat_with_Images.py  2_Chat_with_Websites.py  2_Image_Assistant.py  2_Knowledge_Base.py  3_Chat_with_Website.py  3_Chat_with_Websites.py  3_Website_Assistant.py
db/: README.md  session.py  settings.py  tables.py
db/migrations/: README.md  env.py
db/tables/: base.py
llm/: knowledge_base.py  settings.py  storage.py
llm/assistants/: pdf.py
llm/conversations/: arxiv_auto.py  arxiv_rag.py  pdf_auto.py  pdf_rag.py  website_auto.py  website_rag.py
llm/conversations/test/: arxiv_auto.py  pdf_auto.py  pdf_rag.py  website_auto.py
llm/test/: arxiv_auto.py  arxiv_rag.py  conversation.py  pdf_auto.py  pdf_rag.py  website_auto.py  website_rag.py
notebooks/: auto_pdf_conversation.ipynb  basics.ipynb  chat_with_pdf.ipynb  chatgpt_stream.ipynb  chatgpt_stream_example.ipynb  images.ipynb  rag_pdf_conversation.ipynb  vision.ipynb
scripts/: build_dev_image.sh  build_jupyter_image.sh  build_prd_image.sh  entrypoint.sh  upgrade.sh  validate.sh
workspace/: dev_resources.py  jupyter.Dockerfile  prd_resources.py  settings.py
workspace/example_secrets/: dev_app_secrets.yml
workspace/jupyter/: Dockerfile  lab.py
