[project]
name = "llm"
version = "0.1.0"
requires-python = ">3.7"
readme = "README.md"
authors = [
  {name = "Team", email = "team@team.com"}
]

dependencies = [
  # Data processing libraries
  "pandas",
  "polars",
  # Api server libraries
  "fastapi",
  "typer",
  "uvicorn",
  # Database libraries
  "pgvector",
  "psycopg[binary]",
  "sqlalchemy",
  # Project libraries
  "openai",
  "pypdf",
  "scipy",
  "tiktoken",
  "streamlit",
  # Formatting
  "black",
  # Type checking
  "mypy",
  # Testing
  "pytest",
  # Linting
  "ruff",
  # phidata
  "phidata==2.0.0.dev20",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["api", "app", "llm", "notebooks", "tests", "utils", "workspace"]
# [tool.setuptools.packages.find]
# where = "."
# namespace = "false"

# Change this value to use a different directory for the phidata workspace.
# [tool.phidata]
# workspace = "workspace"

[tool.ruff]
line-length = 110
exclude = [
  "llmenv*",
  ".venv*",
]

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true
exclude = [
  "llmenv*",
  ".venv*",
]

[[tool.mypy.overrides]]
module = [
  "phi.*",
  "pgvector.*",
  "setuptools.*",
]
ignore_missing_imports = true
